--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,4 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+<!-- <a href="/sitemap/">Sitemap</a> -->
+<h1>Welcome to my homepage</h1>
 <!-- end custom footer snippets -->
