--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,4 +1,4 @@
 <!-- start custom footer snippets -->
 <!-- <a href="/sitemap/">Sitemap</a> -->
-<h1>Welcome to my homepage</h1>
+<div>Welcome to my homepage</div>
 <!-- end custom footer snippets -->
