--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
 <!-- <a href="/sitemap/">Sitemap</a> -->
 <div>Welcome to my homepage</div>
-<div class="page__footer-follow">Last updated: 22/07/2022. </div>
+<div class="page__footer-copyright">Last updated: 22/07/2022.</div>
 <!-- end custom footer snippets -->
