--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,6 +12,7 @@
   {% assign title = post.title %}
 {% endif %}
 
+{{ googleViewer = "https://drive.google.com/viewerng/viewer?embedded=true&url=" }}
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -27,7 +28,7 @@
     {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
-      <a href="{{ post.paperurl }}">{{ title }}</a>
+      <a href="{{ googleViewer + post.paperurl }}">{{ title }}</a>
     </h2>
     
     {% if post.read_time %}
