--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,7 +12,6 @@
   {% assign title = post.title %}
 {% endif %}
 
-{% str googleViewer = "https://drive.google.com/viewerng/viewer?embedded=true&url=" %}
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -28,8 +27,7 @@
     {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
-      {% paper_URL = googleViewer + post.paperurl %}
-      <a href="{{ paper_URL }}">{{ title }}</a>
+      <a href="{{ 'https://drive.google.com/viewerng/viewer?embedded=true&url=' }}{{ post.paperurl }}">{{ title }}</a>
     </h2>
     
     {% if post.read_time %}
