--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -49,7 +49,7 @@
     {% endif %}
     
     {% if post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }} <a href="{{ post.paperurl }}"><u>&#8721</u></a></p>
+      <p>Recommended citation: {{ post.citation }} <a href="{{ post.paperurl }}">&#8721</a></p>
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }} </p>
     {% elsif post.paperurl %}
